gcc/testsuite/rust/rustc/ui/extern/extern-main-fn.rs
extern fn main() {} // { dg-error ".E0580." "" { target *-*-* } }

